--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: mori;
+  src: url(./assets/fonts/PPMori-SemiBold.otf);
+}
+
+::-webkit-scrollbar{
+  display: none;
+}
